--- a/dog/package.json
+++ b/dog/package.json
@@ -8,7 +8,7 @@
     "src"
   ],
   "repository": "git@github.com:Amazebot/bbot-rocketchat-boilerplate.git",
-  "author": "Giang<trgiangvp3@gmail.com>",
+  "author": "GIang<trgiangvp3@gmail.com>",
   "contributors": [],
   "license": "MIT",
   "private": false,
